// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewProgressBar /> should render correctly an external project with counter 1`] = `
<TagsList>
  <ProjectPreviewCounter
    icon="cap-baloon-1"
    label="project.preview.counters.contributions"
    showZero={false}
    value={71}
  />
  <ProjectPreviewCounter
    icon="cap-hand-like-2-1"
    label="project.preview.counters.votes"
    showZero={false}
    value={48}
  />
  <ProjectPreviewCounter
    icon="cap-user-2-1"
    label="project.preview.counters.contributors"
    showZero={false}
    value={48}
  />
  <ForwardRef(Relay(ProjectRestrictedAccessFragment))
    icon="cap-lock-2-1"
    project={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "contributionsCount": 71,
        "contributors": Object {
          "totalCount": 48,
        },
        "id": "externalProject",
        "votes": Object {
          "totalCount": 48,
        },
      }
    }
  />
</TagsList>
`;

exports[`<ProjectPreviewProgressBar /> should render correctly an external project without counters 1`] = `
<TagsList>
  <ForwardRef(Relay(ProjectRestrictedAccessFragment))
    icon="cap-lock-2-1"
    project={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "contributionsCount": 0,
        "contributors": Object {
          "totalCount": 0,
        },
        "id": "externalProject",
        "votes": Object {
          "totalCount": 0,
        },
      }
    }
  />
</TagsList>
`;
